trunk/src/WebContent/sys/css/v02/global_v2.css
html, body, h1, h2, h3, h4, h5, ul, li, ol, blockquote, p {
    margin: 0;
    padding: 0;
}
body { font-size:11px !important;font-family: Arial, Helvetica, sans-serif !important; background:#fff url(/VMS/sys/images/v02/bg-map.png) center bottom !important; }
a { text-decoration:none; color:#3366CC;font-size:13px !important; font-weight: 700;white-space:nowrap;}
a:hover { text-decoration:underline; }

/*************** global font ********************/
.small {
    font-size:11px;
}

/**************** Global Form ***************/
input {
    background:#efefef;
    border:1px solid #ccc;
    font-size:11px;
    color:#262626;
    padding:6px;
}
input:focus{ background:white; }
input.button {
    width:50px;
    background:black;
    color:white;
    border:0;
}

/************* wrapper *******************/
#wrapper { width:100%; height:100%; }
#wrap-top { width:100%; height:30px; background:#FC0; }
#wrap-top a { color:#000; }

/************* login *******************/
#loginheader { width:100%; margin:0 auto; 
               padding-top:100px; padding-bottom:20px; text-align:center; background:#FC0; border-bottom:5px solid #333; }
#loginheader h1 { color:#000 !important;  }
#login-wrapper { width:320px; margin:0 auto; text-align:center; padding-top:30px;}
label { width:70px; float:left; line-height:34px; font-size:14px; font-weight:bold; }
input.text-input {
    width: 200px;
    float: right;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    background: #fff;
    border: solid 1px transparent;
    color: #555;
    padding: 8px;
    font-size: 13px;
    margin:5px 0;
}
input.button2 {
    float: right;
    padding: 6px 10px;
    color: #fff;
    font-size: 14px;
    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#a4d04a), to(#459300));
    text-shadow: #050505 0 -1px 0;
    background-color: #459300;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    border: solid 1px transparent;
    font-weight: bold;
    cursor: pointer;
    letter-spacing: 1px;
}
input.button2:hover {
    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#a4d04a), to(#a4d04a), color-stop(80%, #76b226));
    text-shadow: #050505 0 -1px 2px;
    background-color: #a4d04a;
    color: #fff;
}

/*************** content ***************/
#header, #loginInfo { width:1100px; margin:0 auto; }
#loginInfo ul { float:right; margin-top:8px;}
#loginInfo li { float:left; list-style:none; border-right:1px solid #000; padding:0 8px; }
#loginInfo li.last { border-right:none; }


h1 { font-size:36px; font-weight:bold; padding:20px 0; }
#container { width:1100px; margin:0 auto; clear:both; }
#leftCol { width:220px; background:#000; float:left; }
#leftCol ul { padding:20px; margin:0; }
#leftCol ul li { color:#fff; list-style:inside; }
#leftCol ul li a { color:#fff;}
#leftCol ul#info { background:#ddd; }
ul#info li { color:#666 !important; list-style:none !important; }
.header { font-size:11px; text-transform:uppercase; list-style:none !important; font-weight:bold; }
#leftCol ul#membership { background:#36C; }
#leftCol ul#project {background:#C39; }
#leftCol ul#cert {background:#C60; }
#leftCol ul#Account {background:#690; }
#leftCol h3 { font-size:14px; text-transform:uppercase; }
#main { width: 848px; float:left; margin-left:10px; background:#DDDDDD; }
#main h2 { width:808px; background:#36C; color:#fff; padding:20px; }
#breadcrumb { color:#000000; font-size: 13px; padding:20px; float:left; }
.query { background:#fff; 
         width:768px; 
         padding:20px; 
         margin:0 20px; 
         float:left; 
         font-size: 10px !important; 
         font-weight: bold;         
}
.proj-table {float:left; width:810px; margin:20px; border-collapse:collapse; background:#fff;  }
.proj-table th { font-size: 14px !important; text-align:left; border:1px solid #ccc; padding:8px; background:#ccc; color:#fff; }
.proj-table td { font-size: 13px !important; border:1px solid #ccc; padding:8px; color:#000;}
.pagination { width:768px; padding-bottom:20px;; margin:0 20px; float:left; }

.query-table td { font-size:13px !important;border:0px; }
.query-table tr { border:0px; }
/*************** footer ***************/
#footer { width:100%; color:black; font-size:12px; text-align:center; padding:50px 0; clear:both; }

.clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}
.clearfix:after{clear:both;content:' ';display:block;font-size:0;line-height:0;visibility:hidden;width:0;height:0}
.clearfix{display:inline-block}* html .clearfix{height:1%}.clearfix{display:block}

#logoText {color:#FB0 !important;font-size:36px !important;}

.mandatory {
	color: #ff0000;
}

/************* Informational Message Start *******************/
.info {
	color: #4aa337;
}

.infoblock {
	color: #4aa337;
	background-color: #d6f1d0;
	border: 1px solid #5bc944;
	border-style: dashed;
	padding: 8px;
	margin: 16px;
}  
/************* Informational Message End *******************/


/************* Error Message Start *******************/
.error {
	font-size: 11px;
	color: #ff0000;
}

.errorblock {
	color: #ff0000;
	background-color: #ffEEEE;
	border: 1px solid #ff0000;
	border-style: dashed;
	padding: 8px;
	margin: 16px;
}

